<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>cn.zhangchuangla</groupId>
        <artifactId>chuang-system</artifactId>
        <version>1.0.0</version>
    </parent>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>cn.zhangchuangla</groupId>
            <artifactId>chuang-common-excel</artifactId>
        </dependency>
    </dependencies>


    <artifactId>chuang-system-core</artifactId>
    <version>1.0.0</version>
    <description>系统核心模块，提供基础系统功能，包括用户管理，角色管理，菜单管理，部门管理，字典管理等</description>
</project>
